syntax = "proto3";

option csharp_namespace = "LibraryManagement.UserGrpcService";

package user;

service UserGRPCService {

  rpc AddUser (UserAddRequest) returns (UserAddResponse);

  rpc UpdateUser (UserUpdateRequest) returns (UserUpdateResponse);

  rpc DeleteUser (UserDeleteRequest) returns (UserDeleteResponse);

  rpc GetAllUser (UsersRequest) returns (UsersResponse);

  rpc GetUserByEmail (UserByEmailRequest) returns (UserByEmailResponse);

}

message UserAddRequest {
  string userEmail = 1;
  string userName = 2;
  string firstName = 3;
  string lastName = 4;
  string phoneNumber = 5;
}

message UserAddResponse {

}

message UserUpdateRequest {
  string name = 1;
}

message UserUpdateResponse {
  string message = 1;
}

message UserDeleteRequest {
  string name = 1;
}

message UserDeleteResponse {
  string message = 1;
}

message UsersRequest {
  string name = 1;
}

message UsersResponse {
  string message = 1;
}

message UserByEmailRequest {
  string email = 1;
}

message UserByEmailResponse {
  string userEmail = 1;
  string userName = 2;
  string firstName = 3;
  string lastName = 4;
  string phoneNumber = 5;
  int32 id = 6;
}